# GoogleMaps_LeadForge

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GoogleMaps_LeadForge.spec  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: app_config.json  locations.de.json
docs/: DESIGN.md  DEVELOPMENT_WORKFLOW.md  PROJECT_STRUCTURE.md  REQUIREMENTS.md
docs/superpowers/plans/: 2026-06-27-gmap-collector-mvp.md
docs/superpowers/specs/: 2026-06-27-gmap-collector-design.md
scripts/: build_windows_release.ps1  cleanup_runtime_data.py  generate_locations_config.py  open_login_browser.py
src/gmap_collector/: __init__.py  app.py  main.py
src/gmap_collector/browser/: __init__.py  base.py  playwright_engine.py  selenium_engine.py
src/gmap_collector/common/: models.py  paths.py
src/gmap_collector/config/: __init__.py  loader.py  schemas.py
src/gmap_collector/exporters/: __init__.py  (+1 more)
tests/unit/: test_cleanup_runtime_data.py  test_config_loader.py  test_database.py  test_exporter.py  test_generate_locations_config.py  test_gui_layout.py  test_keyword_builder.py  test_maps_crawler_service.py  test_maps_list_parser.py  test_open_login_browser.py  test_repositories.py  test_selenium_engine.py  test_task_repository.py  test_task_runner.py  test_website_crawler.py  test_website_exploration_repository.py  test_website_exploration_service.py  test_website_exploration_worker.py  test_website_info_parser.py
(+25 files in other folders)
