[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "googlemaps-leadforge"
version = "0.1.0"
description = "通过 Google Maps 关键词搜索批量发现、采集和管理商家线索数据的桌面工具"
requires-python = ">=3.11,<3.12"
license = { text = "GPL-3.0-only" }
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]
